# fhe-benchmark-fetch-by-similarity

./: .gitignore  README.md
harness/: cleartext_impl.py  generate_dataset.py  params.py  run_submission.py  utils.py  verify_result.py
measurements/count_medium/: results-1.json  results-2.json  results-3.json
measurements/count_small/: results-1.json  results-2.json  results-3.json
measurements/medium/: results-1.json  results-2.json  results-3.json
measurements/small/: results-1.json  results-2.json  results-3.json
scripts/: build_task.sh
submission/: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dockerignore  LICENSE-THIRD-PARTY  LICENSE.md  README.md  client_decrypt_decode.py  client_encode_encrypt_db.py  client_encode_encrypt_query.py  client_key_generation.py  client_postprocess.py  client_preprocess_dataset.py  client_preprocess_query.py  server_encrypted_compute.py  server_preprocess_dataset.py  server_stop.py  submission_utils.py
submission/cmake/: CCache.cmake  CPM.cmake
submission/export/: CMakeLists.txt  task-encrypt-data.cpp  task-encrypt-query.cpp  task-keygen.cpp  task1-count-matches.cpp  task1-decrypt.cpp  task2-decrypt.cpp  task2-return-k-matches.cpp
submission/include/deb/: CKKSTypes.hpp  Decryptor.hpp  Encryptor.hpp  KeyGenerator.hpp  Preset.hpp  SecretKeyGenerator.hpp  SeedGenerator.hpp  Serialize.hpp  Types.hpp
submission/include/deb/utils/: AleaRandomGenerator.hpp  Basic.hpp  Constant.hpp  FFT.hpp  Macro.hpp  ModArith.hpp  NTT.hpp  NTTConfig.hpp  OmpUtils.hpp  PresetTraits.hpp  RandomGenerator.hpp
submission/include/juvia/: JuviaCudaUtils.hpp  JuviaNttMode.hpp  JuviaPipeline.hpp  JuviaSettings.hpp  JuviaTaskServer.hpp  JuviaTimer.hpp  JuviaTypes.hpp  JuviaVersion.hpp
submission/lib/cmake/juvia/: juviaConfig.cmake  juviaTargets-release.cmake  juviaTargets.cmake
